fix editor window css y overflow.

--- a/src/assets/styles/components/_web-ide.scss
+++ b/src/assets/styles/components/_web-ide.scss
@@ -112,12 +112,12 @@
       }
       .file.file-selected {
         color: #ee81ee;
+        background: #191919 !important;
           // background: #4a4a4a !important;
           //border: 1px solid rgb(120,120,120);;
       }
       .file.folder-selected {
-          background: #2c2c2c !important;
-  
+          background: #191919 !important;
       }
 
       .package-icon {
